# smarthydra-screen-backend

./: SDD.md  generate_data.py  main.py  pyproject.toml
app/: jwt.py  main.py  settings.py
app/database/: engine.py  schema.py
app/router/: __init__.py  auth.py  data.py  station.py  user.py
