[project]
name = "smarthydra-screen-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "pydantic>=2.12.5",
    "sqlmodel>=0.0.27",
    "asyncpg>=0.29.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "uvicorn[standard]>=0.24.0",
    "pyjwt>=2.10.1",
    "toml>=0.10.2",
]
[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
